# zendbx-

./: .gitignore  API_CONTRACT.md  AUTH_TOKEN_FIX.md  AUTO_SCHEMA_INITIALIZATION.md  BACKEND_ISSUES_ANALYSIS.md  BACKEND_URL_MIGRATION_COMPLETE.md  COMMIT_MESSAGE.txt  CORS_AND_500_ERROR_FIX.md  CORS_FIX_COMPLETE.md  CRITICAL_FIX_INSTRUCTIONS.md  DATABASE_CONNECTION_FIX.md  DATABASE_MANAGEMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ISSUES_ANALYSIS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_AND_TEST.md  EMERGENCY_CORS_FIX.md  ENABLE_UUID_EXTENSION.sql  FEATURES_ADDED.md  FINAL_COMMIT_MESSAGE.txt  FINAL_DEPLOYMENT_COMMIT.txt  FINAL_DEPLOYMENT_GUIDE.md  FINAL_TABLE_FIX.md  FRONTEND_URL_FIX.md  FUNCTION_EXAMPLES.md  GENERATE_PROJECT_KEYS.sql  GETTING_STARTED.md  HOW_IT_WORKS.md  HOW_TO_INVITE_TEAM.md  LOCALHOST_ELIMINATION_COMPLETE.md  MINIO_SETUP_COMPLETE.md  OAUTH_URL_GENERATOR_COMPLETE.md  PRODUCTION_DEPLOYMENT_READY.md  PRODUCTION_DEPLOYMENT_STEPS.md  PRODUCTION_OAUTH_SETUP.md  PROJECT_CREATION_FIXED.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_SUBDOMAIN_SETUP.md  RATE_LIMITING_DOCUMENTATION.md  (+30 more)
backend/: .dockerignore  .env.example  .env.production  Dockerfile  POSTGRESQL_WINDOWS_FIX.md  QUICKSTART.md  RUN_HTTP_TEST.md  SQL_AUTOFIX_GUIDE.md  STORAGE_V3_ARCHITECTURE.md  TESTING_GUIDE.md  add_email_columns.py  conftest.py  diagnose_db.py  fix_all_missing_tables.py  fix_api_keys.py  fix_database_code.py  fix_permissions.sql  fix_slug_column.py  inspect_project.py  requirements.txt  run_local_migration.sql  run_migration.py  (+7 more)
zendbx-cli/: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
zendbx-cli/docs/: QUICKSTART.md
zendbx-cli/tests/: __init__.py  test_config.py  test_sql_fixer.py
zendbx-cli/zendbx/: __init__.py  __main__.py  cli.py  config.py  version.py
zendbx-cli/zendbx/commands/: __init__.py  connect.py  db_analyze.py  db_dump.py  db_fix.py  db_restore.py  init.py  status.py
zendbx-cli/zendbx/core/: __init__.py  database.py  sql_fixer.py
zendbx-cli/zendbx/models/: __init__.py  config.py
zendbx-cli/zendbx/utils/: __init__.py  console.py  errors.py  logger.py
(+441 files in other folders)
